# twgec

./: .gitignore  .gitmodules  DevelopmentGuide.md  README.md  build.sh
assets/frontend/: ast.drawio
example/: help.txt  metadata_all.twge  royalVsSkydow.twge  smoke.twge  update-example.sh
example/metadata_all/: test.twge
example/metadata_all/output/: ast-after.twge  output.events
example/royalVsSkydow/: gamemap.twmap  main.twge  output.events  test.twge
example/royalVsSkydow/output/: ast-after.twge  output.events
example/simple-rpg/: ast-after.twge  final.twge  gamemap.twmap  load-store.twge  main.twge  map.twge  monster.twge  output.events  skill.twge  test.twge  utils.twge  weapon.twge
example/simple-rpg/output/: ast-after.twge  output.events
example/threeKingdom/: gamemap.twmap  test.twge
src/: CMakeLists.txt
src/include/: ast.h  codegen.h  lexer.h  parser.h  token.h
src/include/codegen/: action.h  check.h  codegen.h  codegen_transformer.h  formatter.h  metadata.h  transformer.h  trigger.h  twge_action.h
src/include/codegen/instruction/: action.h  check.h  metadata.h  trigger.h
src/include/codegen/utils/: builtin.h  defaultMap.h
src/include/config/: instruction.h
src/include/frontend/: ast.h  lexer.h  parser.h  preprocessor.h  token.h
src/include/option/: help.h  option.h
src/include/tools/: help.h
src/include/transform/: aliasInlining.h  argBinding.h  transform.h
src/include/utils/: keyword.h  location.h  utils.h
src/lib/: ast.cpp  lexer.cpp  main.cpp  parser.cpp
src/lib/codegen/: action.cpp  check.cpp  codegen.cpp  codegen_transfromer.cpp  metadata.cpp  readme.md  transfromer.cpp  trigger.cpp  twge_action.cpp
src/lib/codegen/instruction/: action.cpp  check.cpp  metadata.cpp  trigger.cpp
src/lib/codegen/instruction/enhff/: action.cpp
src/lib/codegen/instruction/std/: action.cpp  check.cpp  trigger.cpp
src/lib/codegen/utils/: builtin.cpp  defaultMap.cpp
src/lib/frontend/: ast.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  readme.md
src/lib/transform/: aliasInlining.cpp  argBinding.cpp  blockInlining.cpp  blockLegalization.cpp  constantFolding.cpp  forLoopUnrolling.cpp  functionInlining.cpp  ifStatementPropagation.cpp  implicitListPromotion.cpp  readme.md  symbolChecking.cpp
src/lib/utils/: keyword.cpp
test/: run-test.sh
test/alias/addSolider/: test.twge
test/alias/error_unmatch_param/: test.twge
test/alias/error_unmatch_param_num/: test.twge
test/codegen/: empty.game.events
test/parser/: error_block.twge  error_module.twge
test/unit/: character_create.twge
tool/: README.md
(+243 files in other folders)
